# qt6_db

./: .gitignore  CMakeLists.txt  main.cpp  schema.sql
controller/: AppController.cpp  AppController.h
model/: DatabaseManager.cpp  DatabaseManager.h  Entities.h  Repositories.cpp  Repositories.h
view/: CrudDialogs.cpp  CrudDialogs.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  RegistrationWindow.cpp  RegistrationWindow.h
